<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pcl_filter_xyzrgb</name>
  <version>0.1.0</version>
  <description>PointXYZRGB instantiations of the PCL filter ROS 2 components.</description>
  <maintainer email="maik.knof@gmx.de">Maik Knof</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>pcl_filter_components</depend>
  <depend>pcl_filter_base</depend>
  <depend>pcl_filter_type_adapters</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>pcl_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <pcl_filter_component
      type="PointXYZRGB"
      type_adapter="pcl_filter_xyzrgb::ros::PclCloudAdapterPointXYZRGB"
      message_type="sensor_msgs/msg/PointCloud2"/>
    <pcl_filter_component
      filter="VoxelGridXYZRGB"
      input="PointXYZRGB"
      output="PointXYZRGB,PointIndices"/>
    <pcl_filter_component
      filter="PassThroughXYZRGB"
      input="PointXYZRGB"
      output="PointXYZRGB,PointIndices"/>
    <pcl_filter_component
      filter="CropBoxXYZRGB"
      input="PointXYZRGB"
      output="PointXYZRGB,PointIndices"/>
    <pcl_filter_component
      filter="PointCloudMergerXYZRGB"
      input="PointXYZRGB,PointXYZRGB"
      output="PointXYZRGB"/>
  </export>
</package>
