<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pcl_filter_xyzrgba</name>
  <version>0.1.0</version>
  <description>PointXYZRGBA instantiations of the PCL filter ROS 2 components.</description>
  <maintainer email="maik.knof@gmx.de">Maik Knof</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>pcl_filter_components</depend>
  <depend>pcl_filter_base</depend>
  <depend>pcl_filter_type_adapters</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>pcl_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <pcl_filter_component
      type="PointXYZRGBA"
      type_adapter="pcl_filter_xyzrgba::ros::PclCloudAdapterPointXYZRGBA"
      message_type="sensor_msgs/msg/PointCloud2"/>
    <pcl_filter_component
      filter="VoxelGridXYZRGBA"
      input="PointXYZRGBA"
      output="PointXYZRGBA,PointIndices"/>
    <pcl_filter_component
      filter="PassThroughXYZRGBA"
      input="PointXYZRGBA"
      output="PointXYZRGBA,PointIndices"/>
    <pcl_filter_component
      filter="CropBoxXYZRGBA"
      input="PointXYZRGBA"
      output="PointXYZRGBA,PointIndices"/>
    <pcl_filter_component
      filter="PointCloudMergerXYZRGBA"
      input="PointXYZRGBA,PointXYZRGBA"
      output="PointXYZRGBA"/>
  </export>
</package>
