<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pcl_filter_xyzrgba</name>
  <version>0.1.0</version>
  <description>PointXYZRGBA instantiations of the PCL filter ROS 2 components.</description>
  <maintainer email="maik.knof@gmx.de">Maik Knof</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>pcl_filter_components</depend>
  <depend>pcl_filter_base</depend>
  <depend>pcl_filter_synchronizer</depend>
  <depend>pcl_filter_type_adapters</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>pcl_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <pcl_filter_component
      type="PointXYZRGBA"
      type_adapter="pcl_filter_xyzrgba::ros::PclCloudAdapterPointXYZRGBA"
      message_type="sensor_msgs/msg/PointCloud2"/>
    <pcl_filter_component
      filter="VoxelGridXYZRGBA"
      input="PointXYZRGBA"
      output="PointXYZRGBA,PointIndices"/>
    <pcl_filter_component
      filter="PassThroughXYZRGBA"
      input="PointXYZRGBA"
      output="PointXYZRGBA,PointIndices"/>
    <pcl_filter_component
      filter="CropBoxXYZRGBA"
      input="PointXYZRGBA"
      output="PointXYZRGBA,PointIndices"/>
    <pcl_filter_component
      filter="ApproximateVoxelGridXYZRGBA"
      input="PointXYZRGBA"
      output="PointXYZRGBA,PointIndices"/>
    <pcl_filter_component
      filter="UniformSamplingXYZRGBA"
      input="PointXYZRGBA"
      output="PointXYZRGBA,PointIndices"/>
    <pcl_filter_component
      filter="RandomSampleXYZRGBA"
      input="PointXYZRGBA"
      output="PointXYZRGBA,PointIndices"/>
    <pcl_filter_component
      filter="GridMinimumXYZRGBA"
      input="PointXYZRGBA"
      output="PointXYZRGBA,PointIndices"/>
    <pcl_filter_component
      filter="StatisticalOutlierRemovalXYZRGBA"
      input="PointXYZRGBA"
      output="PointXYZRGBA,PointIndices"/>
    <pcl_filter_component
      filter="RadiusOutlierRemovalXYZRGBA"
      input="PointXYZRGBA"
      output="PointXYZRGBA,PointIndices"/>
    <pcl_filter_component
      filter="ConditionalRemovalXYZRGBA"
      input="PointXYZRGBA"
      output="PointXYZRGBA,PointIndices"/>
    <pcl_filter_component
      filter="ExtractIndicesXYZRGBA"
      input="PointXYZRGBA"
      output="PointXYZRGBA,PointIndices"/>
    <pcl_filter_component
      filter="RemoveNaNXYZRGBA"
      input="PointXYZRGBA"
      output="PointXYZRGBA,PointIndices"/>
    <pcl_filter_component
      filter="RemoveInfiniteXYZRGBA"
      input="PointXYZRGBA"
      output="PointXYZRGBA,PointIndices"/>
    <pcl_filter_component
      filter="KeepOrganizedXYZRGBA"
      input="PointXYZRGBA"
      output="PointXYZRGBA,PointIndices"/>
    <pcl_filter_component
      filter="FrustumCullingXYZRGBA"
      input="PointXYZRGBA"
      output="PointXYZRGBA,PointIndices"/>
    <pcl_filter_component
      filter="CropSphereXYZRGBA"
      input="PointXYZRGBA"
      output="PointXYZRGBA,PointIndices"/>
    <pcl_filter_component
      filter="ProjectInliersXYZRGBA"
      input="PointXYZRGBA"
      output="PointXYZRGBA,PointIndices"/>
    <pcl_filter_component
      filter="PlaneClipperXYZRGBA"
      input="PointXYZRGBA"
      output="PointXYZRGBA,PointIndices"/>
    <pcl_filter_component
      filter="MedianFilterXYZRGBA"
      input="PointXYZRGBA"
      output="PointXYZRGBA,PointIndices"/>
    <pcl_filter_component
      filter="LocalMaximumXYZRGBA"
      input="PointXYZRGBA"
      output="PointXYZRGBA,PointIndices"/>
    <pcl_filter_component
      filter="BilateralFilterXYZRGBA"
      input="PointXYZRGBA"
      output="PointXYZRGBA,PointIndices"/>
    <pcl_filter_component
      filter="VoxelGridCovarianceXYZRGBA"
      input="PointXYZRGBA"
      output="PointXYZRGBA,PointIndices"/>
    <pcl_filter_component
      filter="MorphologicalFilterXYZRGBA"
      input="PointXYZRGBA"
      output="PointXYZRGBA,PointIndices"/>
    <pcl_filter_component
      filter="MovingLeastSquaresXYZRGBA"
      input="PointXYZRGBA"
      output="PointXYZRGBA,PointIndices"/>
    <pcl_filter_component
      filter="PlaneModelFilterXYZRGBA"
      input="PointXYZRGBA"
      output="PointXYZRGBA,PointIndices"/>
    <pcl_filter_component
      filter="SACSegmentationExtractXYZRGBA"
      input="PointXYZRGBA"
      output="PointXYZRGBA,PointIndices"/>
    <pcl_filter_component
      filter="EuclideanClusterExtractXYZRGBA"
      input="PointXYZRGBA"
      output="PointXYZRGBA,PointIndices"/>
    <pcl_filter_component
      filter="ColorThresholdXYZRGBA"
      input="PointXYZRGBA"
      output="PointXYZRGBA,PointIndices"/>
    <pcl_filter_component
      filter="RGBRangeFilterXYZRGBA"
      input="PointXYZRGBA"
      output="PointXYZRGBA,PointIndices"/>
    <pcl_filter_component
      filter="RGBAAlphaFilterXYZRGBA"
      input="PointXYZRGBA"
      output="PointXYZRGBA,PointIndices"/>
    <pcl_filter_component
      filter="PointCloudMergerXYZRGBA"
      input="PointXYZRGBA,PointXYZRGBA"
      output="PointXYZRGBA"/>
    <pcl_filter_component
      filter="PointCloudConcatenateXYZRGBA"
      input="PointXYZRGBA,PointXYZRGBA"
      output="PointXYZRGBA"/>
    <pcl_filter_component
      filter="PointCloudSubtractXYZRGBA"
      input="PointXYZRGBA,PointXYZRGBA"
      output="PointXYZRGBA"/>
    <pcl_filter_component
      filter="PointCloudDifferenceXYZRGBA"
      input="PointXYZRGBA,PointXYZRGBA"
      output="PointXYZRGBA"/>
  </export>
</package>
